--- a/index.css
+++ b/index.css
@@ -114,11 +114,19 @@
     background-color: #142b6f;
     color: #fff88d;
     font-size: 11px;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 18px;
+    padding-right: 18px;
     font-weight: bold;
     margin-top: 15px;
     border-radius: 0px !important;
     font-family: roboto;
+  }
+  .choose-box-btn:hover
+  {
+    background-color: #142b6f;
+    color: #fff88d;
   }
   .strike
   {
@@ -146,11 +154,6 @@
 .right-menuber
 {
   margin-top: 13px;
-}
-.dotted-div
-{
-  border: dashed 1px #142b6f;
-  font-size: 10px;
 }
 .second-div
 {
@@ -217,7 +220,7 @@ h5
 {
   font-family: Josefin sans;
   text-align: center;
-  padding-top: 30px;
+  padding-top: 60px;
   padding-bottom: 30px;
   padding-left: 160px;
   padding-right: 160px;
@@ -294,5 +297,59 @@ h5
 }
 .footer-div
 {
-  
+  background-color: #ffd5d8;
+  padding-top: 40px;
+  font-family: Josefin sans;
+  padding-bottom: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  color: #142b6f;
+}
+.simple
+{
+  list-style-type: none;
+}
+ul li
+{
+   font-size: 15px;
+   line-height: 50px;
+}
+.follow-p
+{
+  font-size: 17px;
+  font-weight: bold;
+}
+.input-div input
+{
+  border: none;
+  padding: 9px;
+}
+.input-p
+{
+  position: relative;
+}
+.btn-p
+{
+  position: absolute;
+  z-index: 1;
+  top: 19px;
+  left: 150px;
+}
+.copyright-p
+{
+  position: relative;
+  margin-top: 25px;
+  text-align: center;
+  font-size: 15px;
+}
+.Img-div
+{
+ float: right;
+ position: absolute;
+ z-index: 1;
+ margin-top: -46px;
+ margin-left: 1300px;
 }
