--- a/index.css
+++ b/index.css
@@ -12,6 +12,12 @@
     background-color: #fdd7d4;
     padding: 10px;
 }
+.h1-p
+{
+  font-family: Roboto;
+  text-align: center;
+  color: #142b6f;
+}
 .black-header
 {
     font-family: Roboto;
@@ -50,6 +56,7 @@
   .dropdown1 .dropbtn {
     font-size: 13px;
     font-weight: bold;
+    margin-left: 15px;
     border: none;
     outline: none;
     color: #142b6f;
@@ -114,8 +121,8 @@
     background-color: #142b6f;
     color: #fff88d;
     font-size: 11px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 11px;
+    padding-bottom: 11px;
     padding-left: 18px;
     padding-right: 18px;
     font-weight: bold;
@@ -159,8 +166,8 @@
 {
   padding-top: 30px;
   padding-bottom: 30px;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-left: 160px;
+  padding-right: 160px;
 }
 .second-div p
 {
@@ -212,10 +219,6 @@ h5
   font-weight: bold;
   font-family: Josefin sans;
 }
-.third-div
-{
-  padding: 30px;
-}
 .fourth-div
 {
   font-family: Josefin sans;
@@ -242,7 +245,7 @@ h5
   margin-left: 160px;
   margin-right: 160px;
   margin-bottom: 150px;
-  margin-top: 120px;
+  margin-top: 60px;
   text-align: center;
 }
 .fifth-div h5
@@ -321,6 +324,7 @@ ul li
 {
   font-size: 17px;
   font-weight: bold;
+  margin-top: 10px;
 }
 .input-div input
 {
@@ -335,7 +339,7 @@ ul li
 {
   position: absolute;
   z-index: 1;
-  top: 19px;
+  top: 29px;
   left: 150px;
 }
 .copyright-p
