Added property for all buttons

--- a/index.css
+++ b/index.css
@@ -155,6 +155,21 @@
     background-color: #142b6f;
     color: #fff88d;
   }
+  .choose-box-btn:focus
+  {
+    background-color: #142b6f;
+    color: #fff88d;
+  }
+  .choose-box-btn1:hover
+  {
+    background-color: #142b6f;
+    color: #fff88d;
+  }
+  .choose-box-btn1:focus
+  {
+    background-color: #142b6f;
+    color: #fff88d;
+  }
   .strike
   {
     text-decoration: line-through;
